# ml_bot

./: .gitignore  2_training_pipeline.py  99_bybit_kline_fetcher.py  README.md  agent.md  bot.py  dockerfile  pyproject.toml  requirements.txt  test.py
.environment/: .env  docker-compose.yml  dockerfile  pyproject.toml
ml/: 1_kline_data_pipeline.py  2_main_training_pipeline.py  3_meta_labeling.py  4_meta_training.py  99_bybit_kline_fetcher.py  99_gpu_check.py  99_kline_onchain_fetcher.py  99_numerai.sh  kline_data_pipeline_specification.md
ml/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
ml/forward_test/: data_fetch.py  plot.py  test_catboost.py  test_catboost2.py  test_lightgbm.py  test_rnn_base.py
ml/modules/: apply_min_max_scaler.py  macd_rsi_long_strategy.py  rsima_strategy.py  simple_squeeze_momentum_indicator_lb_strategy.py  sma_strategy.py  squeeze_momentum_indicator_lb_strategy.py
modules/cnn_base/: cnn_base_arc.py  tn.py
modules/cross_validation/: MovingWindowKFold.py
modules/lightgbm/: lightgbm_meta.py  meta_predict.py  plot_utils.py
modules/prerpocess/: fvg.py  trend_scan_labels.py  wvf_triple.py
modules/rnn_base/: rnn_base.py  rnn_data_process.py
modules/vitransformer_base/: cnn_base.py  plot_utils.py  vitransformer_base_arc.py
research/src/: 1_data_pipeline.py  2_train_lightgbm_baseline.py  99_check_data.py  config.py  test.py
src/: 1.py  1_data_pipeline.py  99_train_lightgbm_baseline.py  99_train_tabtransformer_baseline.py  prms.py  tmp.ipynb
src/labels/: simulator.py  (+1 more)
(+76 files in other folders)
